kubernetes/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: bridge-api 
              servicePort: 40510
          # WS endpoint to hit backend WS server 
          - path: /ws/
            backend:
              serviceName: bridge-api
              servicePort: 40510
